--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,13 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	padding: 50px;
 }
 
 a {
-  color: #00B7FF;
+	color: #00B7FF;
+}
+
+.glyphicon-thumbs-down,
+.glyphicon-thumbs-up {
+	cursor: pointer;
 }
