--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,11 +2,11 @@
 <head>
 	<title>Flapper News</title>
 	<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/stylesheets/style.css" rel="stylesheet">
 
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
 	<script src="/javascripts/angularApp.js"></script>
-	<style> .glyphicon-thumbs-up { cursor:pointer } </style>
 </head>
 <body ng-app="flapperNews" ng-controller="MainCtrl">
 	<nav class="navbar navbar-default pull-right" ng-controller="NavCtrl">
@@ -28,22 +28,13 @@
 	</div>
 
 	<div ng-repeat="post in posts | orderBy:'-upvotes'">
-		<span class="glyphicon glyphicon-thumbs-up"
-			ng-click="incrementUpvotes(post)"></span>
-		{{post.upvotes}}
+		<span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(post)"></span>{{post.upvotes}}
+		<span class="glyphicon glyphicon-thumbs-down" ng-click="incrementDownvotes(post)"></span>{{post.downvotes}}
 		<span style="font-size:20px; margin-left:10px;">
-			<a ng-show="post.link" href="{{post.link}}">
-				{{post.title}}
-			</a>
-			<span ng-hide="post.link">
-				{{post.title}}
-			</span>
-			<span ng-show="post.author">
-				posted by <a>{{post.author}}</a> |
-			</span>
-			<span>
-				<a href="#/posts/{{post._id}}">Comments</a>
-			</span>
+			<a ng-show="post.link" href="{{post.link}}">{{post.title}}</a>
+			<span ng-hide="post.link">{{post.title}}</span>
+			<span ng-show="post.author">posted by <a>{{post.author}}</a> |</span>
+			<span><a href="#/posts/{{post._id}}">Comments</a></span>
 		</span>
 	</div>
 
@@ -51,21 +42,15 @@
 		<h3>Add a new post</h3>
 
 		<div class="form-group">
-			<input type="text"
-				class="form-control"
-				placeholder="Title"
-				ng-model="title"></input>
+			<input type="text" class="form-control" placeholder="Title" ng-model="title">
 		</div>
 		<div class="form-group">
-			<input type="text"
-			class="form-control"
-			placeholder="Link"
-			ng-model="link"></input>
+			<input type="text" class="form-control" placeholder="Link" ng-model="link">
 		</div>
 		<button type="submit" class="btn btn-primary">Post</button>
 	</form>
 	<div ng-hide="isLoggedIn()">
-	<h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can add a post.</h3>
+		<h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can add a post.</h3>
 	</div>
 	</script>
 	<script type="text/ng-template" id="/login.html">
