--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,39 +9,41 @@
 	<script src="/javascripts/angularApp.js"></script>
 </head>
 <body ng-app="flapperNews" ng-controller="MainCtrl">
-	<nav class="navbar navbar-default pull-right" ng-controller="NavCtrl">
-		<ul class="nav navbar-nav">
-			<li ng-show="isLoggedIn()"><a>{{ currentUser() }}</a></li>
-			<li ng-show="isLoggedIn()"><a href="" ng-click="logOut()">Log Out</a></li>
-			<li ng-hide="isLoggedIn()"><a href="/#/login">Log In</a></li>
-			<li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
-		</ul>
-	</nav>
-	<div class="row">
-		<div class="col-md-6 col-md-offset-3">
-			<ui-view></ui-view>
+	<div class="container-fluid">
+		<nav class="navbar navbar-default pull-right" ng-controller="NavCtrl">
+			<ul class="nav navbar-nav">
+				<li ng-show="isLoggedIn()"><a>{{ currentUser() }}</a></li>
+				<li ng-show="isLoggedIn()"><a href="" ng-click="logOut()">Log Out</a></li>
+				<li ng-hide="isLoggedIn()"><a href="/#/login">Log In</a></li>
+				<li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
+			</ul>
+		</nav>
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+				<ui-view></ui-view>
+			</div>
 		</div>
 	</div>
 	<script type="text/ng-template" id="/home.html">
 	<!-- Template: Homepage -->
 	<div class="page-header">
-		<h1>Flapper News</h1>
+		<h1><a href="#/" title="Flapper News">Flapper News</a></h1>
 	</div>
 
 	<!-- show all posts, sorted by upvotes -->
-	<div ng-repeat="post in posts | orderBy:'-upvotes'">
-		<a ng-click="incrementUpvotes(post)"><span class="glyphicon glyphicon-thumbs-up"></span>{{post.upvotes}}</a>
-		<a ng-click="incrementDownvotes(post)"><span class="glyphicon glyphicon-thumbs-down"></span>{{post.downvotes}}</a>
-		<span style="font-size:20px; margin-left:10px;">
-			<a ng-show="post.link" href="{{post.link}}">{{post.title}}</a>
-			<span ng-hide="post.link">{{post.title}}</span>
-			<span ng-show="post.author">posted by <a>{{post.author}}</a> |</span>
-			<span><a href="#/posts/{{post._id}}">Comments</a></span>
-			<!-- Link for deleting post-->
-			<span class="delete" ng-show="isLoggedIn()" ng-click="deletePost(post)">
-				<a href="#"> Delete </a>
+	<div class="row posts" ng-repeat="post in posts | orderBy:'-upvotes'">
+		<div class="col-xs-12 col-md-12">
+			<a class="btn btn-primary" ng-click="incrementUpvotes(post)"><span class="glyphicon glyphicon-thumbs-up"></span>{{post.upvotes}}</a>
+			<a class="btn btn-warning" ng-click="incrementDownvotes(post)"><span class="glyphicon glyphicon-thumbs-down"></span>{{post.downvotes}}</a>
+			<span>
+				<a ng-show="post.link" href="{{post.link}}">{{post.title}}</a>
+				<span ng-hide="post.link">{{post.title}}</span>
+				<span ng-show="post.author">posted by <a>{{post.author}}</a> |</span>
+				<span><a href="#/posts/{{post._id}}">Comments <span class="badge">{{post.comments.length}}</span></a></span>
+				<!-- Link for deleting post-->
+				<a href="#" class="btn btn-danger btn-xs pull-right" ng-show="isCurrentUser(post)" ng-click="deletePost(post)"><i class="icon-trash icon-white"></i> Delete </a>
 			</span>
-		</span>
+		</div>
 	</div>
 
 	<form class="form-add-post" ng-submit="addPost()" ng-show="isLoggedIn()">
@@ -60,11 +62,12 @@
 	</div>
 	</script>
 	<script type="text/ng-template" id="/login.html">
+	<!-- Template: login -->
 	<div class="page-header">
-		<h1>Flapper News</h1>
+		<h1><a href="#/" title="Flapper News">Flapper News</a></h1>
 	</div>
 
-	<div ng-show="error" class="alert alert-danger row">
+	<div ng-show="error" class="alert alert-danger row" role="alert">
 		<span>{{ error.message }}</span>
 	</div>
 
@@ -81,6 +84,10 @@
 	</form>
 	</script>
 	<script type="text/ng-template" id="/posts.html">
+	<!-- Template: post -->
+	<div class="page-header">
+		<h1><a href="#/" title="Flapper News">Flapper News</a></h1>
+	</div>
 	<div class="page-header">
 		<h3>
 			<a ng-show="post.link" href="{{post.link}}">{{post.title}}</a>
@@ -94,7 +101,7 @@
 		<span>{{comment.body}}</span>
 	</div>
 
-	<form ng-submit="addComment()" ng-show="isLoggedIn()" style="margin-top:30px;">
+	<form class="form-add-comment" ng-submit="addComment()" ng-show="isLoggedIn()">
 		<h3>Add a new comment</h3>
 		<div class="form-group">
 			<input type="text" class="form-control" placeholder="Comment" ng-model="body">
@@ -106,15 +113,16 @@
 	</div>
 	</script>
 	<script type="text/ng-template" id="/register.html">
+	<!-- Template: register -->
 	<div class="page-header">
-		<h1>Flapper News</h1>
+		<h1><a href="#/" title="Flapper News">Flapper News</a></h1>
 	</div>
 
 	<div ng-show="error" class="alert alert-danger row">
 		<span>{{ error.message }}</span>
 	</div>
 
-	<form ng-submit="register()" style="margin-top:30px;">
+	<form class="form-register" ng-submit="register()">
 		<h3>Register</h3>
 
 		<div class="form-group">
