--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,13 +33,16 @@
 	<!-- show all posts, sorted by upvotes -->
 	<div class="row posts" ng-repeat="post in posts | orderBy:'-upvotes'">
 		<div class="col-xs-12 col-md-12">
-			<a class="btn btn-primary" ng-click="incrementUpvotes(post)"><span class="glyphicon glyphicon-thumbs-up"></span>{{post.upvotes}}</a>
-			<a class="btn btn-warning" ng-click="incrementDownvotes(post)"><span class="glyphicon glyphicon-thumbs-down"></span>{{post.downvotes}}</a>
+			<a class="btn btn-primary" ng-show="post.upvotes >= post.downvotes" ng-click="incrementUpvotes(post)"><span class="glyphicon glyphicon-thumbs-up"></span>{{post.upvotes}}</a>
+			<a class="btn btn-default" ng-show="post.upvotes >= post.downvotes" ng-click="incrementDownvotes(post)"><span class="glyphicon glyphicon-thumbs-down"></span>{{post.downvotes}}</a>
+			<a class="btn btn-default" ng-show="post.downvotes > post.upvotes" ng-click="incrementUpvotes(post)"><span class="glyphicon glyphicon-thumbs-up"></span>{{post.upvotes}}</a>
+			<a class="btn btn-primary" ng-show="post.downvotes > post.upvotes" ng-click="incrementDownvotes(post)"><span class="glyphicon glyphicon-thumbs-down"></span>{{post.downvotes}}</a>
 			<span>
 				<a ng-show="post.link" href="{{post.link}}">{{post.title}}</a>
 				<span ng-hide="post.link">{{post.title}}</span>
-				<span ng-show="post.author">posted by <a>{{post.author}}</a> |</span>
-				<span><a href="#/posts/{{post._id}}">Comments <span class="badge">{{post.comments.length}}</span></a></span>
+				<span ng-show="post.author">posted by <a>{{post.author}}</a></span>
+				<span ng-show="post.comments.length"> | <a href="#/posts/{{post._id}}">Comments <span class="badge">{{post.comments.length}}</span></a></span>
+				<span ng-hide="post.comments.length"> | <a href="#/posts/{{post._id}}">Comment</a></span>
 				<!-- Link for deleting post-->
 				<a href="#" class="btn btn-danger btn-xs pull-right" ng-show="isCurrentUser(post)" ng-click="deletePost(post)"><i class="icon-trash icon-white"></i> Delete </a>
 			</span>
