--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
 			<span>
 				<a ng-show="post.link" href="{{post.link}}">{{post.title}}</a>
 				<span ng-hide="post.link">{{post.title}}</span>
-				<span ng-show="post.author">posted by <a>{{post.author}}</a></span>
+				<span ng-show="post.author">posted by {{post.author}}</span>
 				<span ng-show="post.comments.length"> | <a href="#/posts/{{post._id}}">Comments <span class="badge">{{post.comments.length}}</span></a></span>
 				<span ng-hide="post.comments.length"> | <a href="#/posts/{{post._id}}">Comment</a></span>
 				<!-- Link for deleting post-->
