--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,10 +33,8 @@
 	<!-- show all posts, sorted by upvotes -->
 	<div class="row posts" ng-repeat="post in posts | orderBy:'-upvotes'">
 		<div class="col-xs-12 col-md-12">
-			<a class="btn btn-primary" ng-show="post.upvotes >= post.downvotes" ng-click="incrementUpvotes(post)"><span class="glyphicon glyphicon-thumbs-up"></span>{{post.upvotes}}</a>
-			<a class="btn btn-default" ng-show="post.upvotes >= post.downvotes" ng-click="incrementDownvotes(post)"><span class="glyphicon glyphicon-thumbs-down"></span>{{post.downvotes}}</a>
-			<a class="btn btn-default" ng-show="post.downvotes > post.upvotes" ng-click="incrementUpvotes(post)"><span class="glyphicon glyphicon-thumbs-up"></span>{{post.upvotes}}</a>
-			<a class="btn btn-primary" ng-show="post.downvotes > post.upvotes" ng-click="incrementDownvotes(post)"><span class="glyphicon glyphicon-thumbs-down"></span>{{post.downvotes}}</a>
+			<a class="btn btn-success" ng-click="incrementUpvotes(post)"><span class="glyphicon glyphicon-thumbs-up"></span>{{post.upvotes}}</a>
+			<a class="btn btn-danger" ng-click="incrementDownvotes(post)"><span class="glyphicon glyphicon-thumbs-down"></span>{{post.downvotes}}</a>
 			<span>
 				<a ng-show="post.link" href="{{post.link}}">{{post.title}}</a>
 				<span ng-hide="post.link">{{post.title}}</span>
@@ -94,10 +92,8 @@
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			<div class="buttons" style="float: left; margin-right: 15px;">
-				<a class="btn btn-primary btn-xs" ng-show="post.upvotes >= post.downvotes" ng-click="incrementUpvotes(post)"><span class="glyphicon glyphicon-thumbs-up"></span>{{post.upvotes}}</a>
-				<a class="btn btn-default btn-xs" ng-show="post.upvotes >= post.downvotes" ng-click="incrementDownvotes(post)"><span class="glyphicon glyphicon-thumbs-down"></span>{{post.downvotes}}</a>
-				<a class="btn btn-default btn-xs" ng-show="post.downvotes > post.upvotes" ng-click="incrementUpvotes(post)"><span class="glyphicon glyphicon-thumbs-up"></span>{{post.upvotes}}</a>
-				<a class="btn btn-primary btn-xs" ng-show="post.downvotes > post.upvotes" ng-click="incrementDownvotes(post)"><span class="glyphicon glyphicon-thumbs-down"></span>{{post.downvotes}}</a>
+				<a class="btn btn-success btn-xs" ng-click="incrementUpvotes(post)"><span class="glyphicon glyphicon-thumbs-up"></span>{{post.upvotes}}</a>
+				<a class="btn btn-danger btn-xs" ng-click="incrementDownvotes(post)"><span class="glyphicon glyphicon-thumbs-down"></span>{{post.downvotes}}</a>
 			</div>
 			<h3 class="panel-title">
 				<a ng-show="post.link" href="{{post.link}}">{{post.title}}</a>
@@ -107,10 +103,8 @@
 
 		<!-- show all comments, sorted by upvotes -->
 		<div class="panel-body comment" ng-repeat="comment in post.comments | orderBy:'-upvotes'">
-			<a class="btn btn-primary btn-xs" ng-show="comment.upvotes >= comment.downvotes" ng-click="incrementUpvotes(comment)"><span class="glyphicon glyphicon-thumbs-up"></span>{{comment.upvotes}}</a>
-			<a class="btn btn-default btn-xs" ng-show="comment.upvotes >= comment.downvotes" ng-click="incrementDownvotes(comment)"><span class="glyphicon glyphicon-thumbs-down"></span>{{comment.downvotes}}</a>
-			<a class="btn btn-default btn-xs" ng-show="comment.downvotes > comment.upvotes" ng-click="incrementUpvotes(comment)"><span class="glyphicon glyphicon-thumbs-up"></span>{{comment.upvotes}}</a>
-			<a class="btn btn-primary btn-xs" ng-show="comment.downvotes > comment.upvotes" ng-click="incrementDownvotes(comment)"><span class="glyphicon glyphicon-thumbs-down"></span>{{comment.downvotes}}</a>
+			<a class="btn btn-success btn-xs" ng-click="incrementUpvotes(comment)"><span class="glyphicon glyphicon-thumbs-up"></span>{{comment.upvotes}}</a>
+			<a class="btn btn-danger btn-xs" ng-click="incrementDownvotes(comment)"><span class="glyphicon glyphicon-thumbs-down"></span>{{comment.downvotes}}</a>
 			 - by {{comment.author}}:
 			<span>{{comment.body}}</span>
 		</div>
