--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,8 +33,8 @@
 	<!-- show all posts, sorted by upvotes -->
 	<div class="row posts" ng-repeat="post in posts | orderBy:'-upvotes'">
 		<div class="col-xs-12 col-md-12">
-			<a class="btn btn-success" ng-click="incrementUpvotes(post)"><span class="glyphicon glyphicon-thumbs-up"></span>{{post.upvotes}}</a>
-			<a class="btn btn-danger" ng-click="incrementDownvotes(post)"><span class="glyphicon glyphicon-thumbs-down"></span>{{post.downvotes}}</a>
+			<a class="btn btn-success btn-xs" ng-click="incrementUpvotes(post)"><span class="glyphicon glyphicon-thumbs-up"></span>{{post.upvotes}}</a>
+			<a class="btn btn-danger btn-xs" ng-click="incrementDownvotes(post)"><span class="glyphicon glyphicon-thumbs-down"></span>{{post.downvotes}}</a>
 			<span>
 				<a ng-show="post.link" href="{{post.link}}">{{post.title}}</a>
 				<span ng-hide="post.link">{{post.title}}</span>
